kylin-assistant (1.0.0-0ubuntu1) bionic; urgency=low

  * Fork youker-assistant(commit:764)
  * Upgrade from Qt4 to Qt5.
  * Add qtsingleapplication.
  * Let the child window display normal.
  * Add PingBack.
  * Rewrite systeminfo frame.
  * Rewrite setting frame.
  * Separate data and graphics.
  * Add Cpu.
  * Add Network.
  * Add memory rate.
  * Add cpu rate and idle rate.
  * Add processes, resources and file system manager.

 -- lixiang <lixiang@kylinos.cn>  Mon, 29 Jan 2018 17:54:44 +0800